チャット画面のフロント実装

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,6 +1,50 @@
 <div class="main-header">
+  <div class="summary">
+    <a>hogefuga</a>
+  </div>
+  <div class="close-chat">
+    <a herf="#">チャット終了</a>
+  </div>
 </div>
 <div class="main-body">
+  <div class="message">
+    <div class="mes-title">
+      <div class="mes-name">
+        <a>Tom</a>
+      </div>
+      <div class="mes-date">
+        <a>2021/6/10 11:59:11</a>
+      </div>
+    </div>
+    <div class="lower-message">
+      <div class="mes-content">
+        <a>おはよう</a>
+      </div>
+    </div>
+  </div>
+  <div class="message">
+    <div class="mes-title">
+      <div class="mes-name">
+        <a>Sim</a>
+      </div>
+      <div class="mes-date">
+        <a>2021/6/10 12:39:11</a>
+      </div>
+    </div>
+    <div class="lower-message">
+      <div class="mes-content">
+        <a>hello</a>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="main-footer">
-<div>
+<div class="form">
+  <div class="form-input">
+    <input class="form-message" placeholder= "type a message">
+    <label class="form-image">
+      <span class="image-file">画像</span>
+      <input type="file" class="hidden">
+    </label>
+  </div>
+  <input class="form-submit" type="submit" value="送信">
+</div>
