--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -53,14 +53,89 @@
   height: 100px;
   background-color: #FFFFFF;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
 }
+.summary{
+  color: #333;
+  font-size: 24px;
+  margin-top: 36px;
+}
+.close-chat{
+  margin-top:40px;
+}
+.close-chat a{
+  padding: 20px;
+  color: darkred;
+  border: 1px solid darkred;
+  text-decoration: none;
+}
+
 .main-body{
   height: calc(100vh - 100px - 90px);
   background-color: #FAFAFA;
   padding: 46px 40px 0;
+  overflow: scroll;
 }
-.main-footer{
+.message{
+  margin-bottom: 10px 0 0 0; 
+}
+.mes-title{
+  display: flex;
+}
+.mes-name{
+  font-size: 16px;
+  color: #434A54;
+}
+.mes-date{
+  font-size: 12px;
+  color: #999;
+  padding-left: 10px;
+}
+.lower-message {
+  margin-top: 10px;
+}
+.mes-content{
+  font-size: 14px;
+  color: #434A54;
+  margin-bottom: 40px;
+}
+
+.form{
   height: 90px;
   background-color: #DDDDDD;
   padding: 20px 40px;
+  display: flex;
+}
+.form-input{
+  background-color: white;
+  display: flex;
+  width: 100%;
+}
+.form-message{
+  border: none;
+  height: 50px;
+  width: 100%;
+  padding-left: 10px;
+}
+.form-submit{
+  background-color: #38AEF0;
+  border: none;
+  color: white;
+  font-size: 16px;
+  height: 50px;
+  margin-left: 15px;
+  padding: 0 20px;
+}
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+.hidden {
+  display: none;
 }
