--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,6 +1,6 @@
 <div class="main-header">
   <div class="summary">
-    <a>hogefuga</a>
+    <%= @room.name %>
   </div>
   <div class="close-chat">
     <a herf="#">チャット終了</a>
