--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -111,6 +111,7 @@
 .form-input{
   background-color: white;
   display: flex;
+  justify-content: space-between;
   width: 100%;
 }
 .form-message{
