--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -3,7 +3,7 @@
     <%= @room.name %>
   </div>
   <div class="close-chat">
-    <a herf="#">チャット終了</a>
+    <%= link_to "チャットを終了する", room_path(@room), method: :delete %>
   </div>
 </div>
 <div class="main-body">
